--- a/index.html
+++ b/index.html
@@ -1,18 +1,79 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>UNM GENERADOR DE CORAZONES 💚 por Jay</title>
 
-    <title>Sketch</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
 
-    <link rel="stylesheet" type="text/css" href="style.css">
-
-    <script src="libraries/p5.min.js"></script>
-    <script src="libraries/p5.sound.min.js"></script>
+    <link rel="stylesheet" href="style.css" />
   </head>
-
   <body>
+    <div class="terminal-container">
+      <header class="terminal-header">
+        <div class="terminal-title">
+          <span class="prompt">jay@unm-hacker-love:~$</span>
+          <span class="cursor-blink">_</span>
+        </div>
+        <h1 class="main-title">INICIANDO MOTOR DE AMOR.</h1>
+      </header>
+
+      <div class="input-section" id="seccionEntrada">
+        <div class="input-container">
+          <input
+            type="text"
+            id="entradaNombre"
+            placeholder="Ingrese el Nombre Objetivo..."
+            maxlength="20"
+            class="terminal-input"
+          />
+          <button id="botonFormar" class="terminal-button">
+            <span class="button-text">GENERAR CORAZÓN</span>
+            <span class="cursor-blink">_</span>
+          </button>
+        </div>
+      </div>
+
+      <div class="heart-section hidden" id="seccionCorazon">
+        <div class="loading-text" id="textoCargando">
+          <span class="prompt"
+            >PROCESO INICIADO: Construyendo modelo de corazón...</span
+          >
+          <span class="cursor-blink">_</span>
+        </div>
+        <br />
+
+        <div class="heart-container" id="contenedorCorazon"></div>
+
+        <div class="final-message hidden" id="mensajeFinal">
+          <span class="te-amo-text">CONEXIÓN ESTABLECIDA:</span
+          ><span class="lover-name"></span>
+        </div>
+      </div>
+
+      <div id="contenedor-canvas-p5"></div>
+    </div>
+
+    <div class="credits">
+      <a
+        href="https://github.com/Jay/unm-heart-generator"
+        target="_blank"
+        rel="noopener noreferrer"
+        >Jay - Universidad Nacional de Moreno</a
+      >
+    </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.1/p5.js"></script>
     <script src="sketch.js"></script>
   </body>
 </html>
